@@ -101,6 +101,11 @@ public:
    * ACE_INVALID_HANDLE for @a std_in will cause ACE_STDIN to be
    * duplicated and set in this object.
    *
+   * @note Windows: The implementation of set_handles() uses DuplicateHandle
+   *       on Windows. DuplicateHandle cannot be used to pass a socket handle
+   *       on Windows. Socket handles require an alternate mechanism to pass;
+   *       see http://msdn.microsoft.com/en-us/library/ms741565(v=VS.85).aspx
+   *
    * @return 0 on success, -1 on failure.
    */
   int set_handles (ACE_HANDLE std_in,
